--- a/Ecomonitoring/Ecomonitoring.csproj
+++ b/Ecomonitoring/Ecomonitoring.csproj
@@ -257,7 +257,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Ecomonitoring.sql" />
+    <Content Include="MySQL script\Ecomonitoring.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
